feat: add docker file

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,13 @@ PADDLE_WEBHOOK_SECRET=pdl_...
 STRIPE_PUBLISHABLE_KEY=pk_test_...
 STRIPE_SECRET_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Deploy with docker envs
+# REDIS_HOST=redis
+# REDIS_PORT=6379
+# DB_CONNECTION=pgsql
+# DB_HOST=db
+# DB_PORT=5432
+# DB_DATABASE=laravel
+# DB_USERNAME=postgres
+# DB_PASSWORD=secret
