--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     restart: unless-stopped
     working_dir: /var/www
     volumes:
-      - ./:/var/www
+      - ./:/var/www:cached
+      - ./vendor:/var/www/vendor:cached
     networks:
       - app-network
 
@@ -20,7 +21,7 @@ services:
     ports:
       - "8000:80"
     volumes:
-      - ./:/var/www
+      - ./:/var/www:cached
       - ./docker/nginx/conf.d:/etc/nginx/conf.d
     networks:
       - app-network
