--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,22 +8,18 @@ services:
     container_name: php-app
     restart: unless-stopped
     working_dir: /var/www
-    volumes:
-      - ./:/var/www
-    networks:
-      - app-network
-
-  nginx:
-    image: nginx:alpine
-    container_name: php-nginx
-    restart: unless-stopped
     ports:
-      - "8000:80"
+      - "8000:8080"
+      - "433:8443"
     volumes:
-      - ./:/var/www
-      - ./docker/nginx/conf.d:/etc/nginx/conf.d
+      - './storage:/var/www/html/storage:delegated'
+    user: www-data:www-data
     networks:
       - app-network
+    command: >
+      bash -c "chmod -R 777 /var/www/html/storage &&
+               chmod -R 777 /var/www/html/bootstrap/cache &&
+               php-fpm"
 
   db:
     image: postgres:15
