--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
-        "php": "^8.3",
+        "php": "^8.2",
         "ext-exif": "*",
         "ext-gd": "*",
         "bezhansalleh/filament-google-analytics": "^2.0",
@@ -66,6 +66,12 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate"
+        ],
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover",
+            "@php artisan storage:link",
+            "@php artisan filament:upgrade"
         ]
     },
     "config": {
