--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -97,6 +97,7 @@ pm.min_spare_servers = 4
 pm.max_spare_servers = 32
 pm.start_servers = 18
 clear_env = no
+php_admin_value[memory_limit] = 512M
 '''
 
 "nginx.template.conf" = '''
@@ -169,7 +170,7 @@ http {
             include $!{nginx}/conf/fastcgi_params;
             include $!{nginx}/conf/fastcgi.conf;
 
-            fastcgi_param PHP_VALUE "upload_max_filesize=30M \n post_max_size=35M";
+            fastcgi_param PHP_VALUE "upload_max_filesize=30M \n post_max_size=35M \n memory_limit=512M";
         }
 
         location ~ /\.(?!well-known).* {
